<?xml version="1.0"?>
<package>
  <name>surveyor</name>
  <version>0.0.0</version>
  <description>The surveyor is a driver for the Surveyor Vision System.
    It can acquire images from the camera(s) and receives geometry_msgs::Twist commands.
  </description>

  <maintainer email="r.c.ladan@gmail.com">René Ladan</maintainer>
  <maintainer email="gael.ecorchard@ciirc.cvut.cz">Gaël Ecorchard</maintainer>


  <license>BSD</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/surveyor</url> -->
  <url type="repository">https://github.com/rene0/ros-surveyor</url>


  <author email="r.c.ladan@gmail.com">René Ladan</author>
  <author email="gael.ecorchard@ciirc.cvut.cz">Gaël Ecorchard</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>roscpp</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>opencv2</run_depend>
  <run_depend>roscpp</run_depend>


  <export>
  </export>
</package>
